--- a/speakers.html
+++ b/speakers.html
@@ -38,20 +38,27 @@
 
     <div class="speakers" style="margin-top:14px;">
       <!-- Example Speakers (change freely) -->
-      <article class="speaker" data-speaker-date="2025-09-10">
+      <article class="speaker" data-speaker-date="2025-11-12">
         <div class="tag">Upcoming</div>
-        <h3>DEFCON Recap and LLM Web Aps</h3>
-        <div class="meta">ProBro. • Sep 10, 2025</div>
-        <p class="small">DEFCON Recap and using LLMs locally UPDATE! This will cover how to integrate NGINX for making interactive AI web applications.</p>
+        <h3>GENTOO!!!</h3>
+        <div class="meta">Rocco • Nov. 12, 2025</div>
+        <p class="An overview of GENTOO OS and what makes it special among Linux / Unix Distributions.</p>
       </article>
 
-      <article class="speaker" data-speaker-date="2025-10-08">
+      <article class="speaker" data-speaker-date="2025-12-10">
         <div class="tag">Upcoming</div>
         <h3>YOUR TALK HERE!!!</h3>
-        <div class="meta">TBD. • Oct 8, 2025</div>
+        <div class="meta">TBD. • Dec 12, 2025</div>
         <p class="Contact ProBro to submit a talk, get posted, and you will be added to our Speaker History! Great for building your creds!</p>
       </article>
 
+      <article class="speaker" data-speaker-date="2025-09-10">
+        <div class="tag">Past</div>
+        <h3>DEFCON Recap & LLM Web Apps</h3>
+        <div class="meta">Probro. • Sept. 10, 2025</div>
+        <p class="small">DEFCON Recap and using LLMs locally UPDATE! This will cover how to integrate NGINX for making interactive AI web applications.</p>
+      </article>
+          
       <article class="speaker" data-speaker-date="2025-05-14">
         <div class="tag">Past</div>
         <h3>Tools Used in Law Enforcement</h3>
