--- a/speakers.html
+++ b/speakers.html
@@ -41,7 +41,7 @@
       <article class="speaker" data-speaker-date="2025-11-12">
         <div class="tag">Upcoming</div>
         <h3>GENTOO!!!</h3>
-        <div class="meta">Rocco • Nov. 12, 2025</div>
+        <div class="meta">Aleksei • Nov. 12, 2025</div>
         <p class="An overview of GENTOO OS and what makes it special among Linux / Unix Distributions.</p>
       </article>
 
