Update speaker details and tags in speakers.html

--- a/speakers.html
+++ b/speakers.html
@@ -33,13 +33,13 @@
     <p>Drop in to learn, present, or just hang out. To propose a talk, ping us on Discord.</p>
 
     <div class="notice small">
-      Edit this page by duplicating a <span class="code">&lt;article class="speaker"&gt;</span> block. Set <span class="code">data-speaker-date="YYYY-MM-DD"</span> and the status tag updates automatically (Past / Upcoming / Today).
+      Edit this page by duplicating a <span class="code">&lt;article class="speaker"&gt;</span> block. Set <span class="code">data-speaker-date="YYYY-MM-DD"</span> and the status tag updates automatically (Past /  / Today).
     </div>
 
     <div class="speakers" style="margin-top:14px;">
       <!-- Example Speakers (change freely) -->
       <article class="speaker" data-speaker-date="2025-11-12">
-        <div class="tag">Upcoming</div>
+        <div class="tag">Past</div>
         <h3>GENTOO!!!</h3>
         <div class="meta">Aleksei • Nov. 12, 2025</div>
         <p class="An overview of GENTOO OS and what makes it special among Linux / Unix Distributions.</p>
@@ -47,11 +47,18 @@
 
       <article class="speaker" data-speaker-date="2025-12-10">
         <div class="tag">Upcoming</div>
+        <h3>Modern Day Software Piracy</h3>
+        <div class="meta">Aleksei •Feb. 11, 20265</div>
+        <p class="Software Piracy - a brief history.</p>
+      </article>
+
+      <article class="speaker" data-speaker-date="2025-12-10">
+        <div class="tag">Upcoming</div>
         <h3>YOUR TALK HERE!!!</h3>
         <div class="meta">TBD. • Dec 10, 2025</div>
         <p class="Contact ProBro to submit a talk, get posted, and you will be added to our Speaker History! Great for building your creds!</p>
-      </article>
-
+      </article>          
+          
       <article class="speaker" data-speaker-date="2025-09-10">
         <div class="tag">Past</div>
         <h3>DEFCON Recap & LLM Web Apps</h3>
